# test_skeleton

./: CMakeLists.txt  README.md  package.xml
bag/: cubone_record.bag  test_planning_cubo.bag  test_planning_skeleton.bag
bag/test_planning/: test_planning_cubo.bag  test_planning_scheletro.bag
bag/test_scaling/: cubone_poses_record.bag  skeleton_poses_record.bag
bag/test_scaling/test_cubo1/: test_cubo1_2021-09-29-17-22-55.bag  test_cubo1_2021-09-29-17-23-06.bag  test_cubo1_2021-09-29-17-23-17.bag  test_cubo1_2021-09-29-17-23-29.bag  test_cubo1_2021-09-29-17-23-40.bag
bag/test_scaling/test_cubo2/: test_cubo1_2021-09-29-17-40-25.bag  test_cubo1_2021-09-29-17-40-39.bag  test_cubo1_2021-09-29-17-40-53.bag  test_cubo1_2021-09-29-17-41-07.bag  test_cubo1_2021-09-29-17-41-21.bag
bag/test_scaling/test_cubo3/: test_cubo1_2021-09-29-17-50-22.bag  test_cubo1_2021-09-29-17-50-34.bag  test_cubo1_2021-09-29-17-50-46.bag  test_cubo1_2021-09-29-17-50-57.bag  test_cubo1_2021-09-29-17-51-09.bag
bag/test_scaling/test_skeleton1/: test_skeleton1_2021-09-29-19-08-19.bag  test_skeleton1_2021-09-29-19-08-32.bag  test_skeleton1_2021-09-29-19-08-44.bag  test_skeleton1_2021-09-29-19-08-57.bag  test_skeleton1_2021-09-29-19-09-10.bag
bag/test_scaling/test_skeleton2/: test_skeleton1_2021-09-29-19-10-52.bag  test_skeleton1_2021-09-29-19-11-06.bag  test_skeleton1_2021-09-29-19-11-19.bag  test_skeleton1_2021-09-29-19-11-32.bag  (+1 more)
config/: test_planning.yaml  topics.yaml
launch/: launch_bag_test_scaling.launch  rosbag.launch  test_planning.launch
src/: test_planning.cpp  test_scaling.cpp
(+5 files in other folders)
